[B]0.9.9[/B]
- [NEW] Unwatched / new tvshow episode flag (thanks postdeath)
- [MODIFIED] Settings level indicator (Gotham builds) position and access adjusted
- [NEW] Radio section from PVR now available in music section (thanks Ronie - totally missed that!) 
- [FIXED] Music section menu navigation was not transferring focus correctly in some instances (thanks StfAL)
- [MODIFIED] Cast and crew dialog behaves properly with back button (thanks StfAL)
- [FIXED] debugging messaging system revised (pertinent to devs only)
- [FIXED] Various tweaks and fixes to prepare for official skins release (thanks Ronie)

[B]0.9.5[/B]
- [MODIFIED] Various PVR tweaking
- [NEW] Music / video scan progress indicator (thanks zznh)
- [NEW] View current music playlist (accessible from options menu in music section)
- [MODIFIED] Music visualisation background reworked. Track progress indicator reinstated (thanks bigpen15crew)
- [NEW] Settings level indicator for Gotham builds
- Various tweaks and bugfixes

[B]0.9.0[/B]
- [NEW] Video bookmarks (videoOSDBookmarks.xml)
- [MODIFIED] Sidebar options menu reworked
- [MODIFIED] custom menu item selection / deletion system revised
- [MODIFIED] PVR views and dialogs.
- Numerous miscellaneous tweaks, fixes and general tidying up

[B]0.8.0[/B]
- [MODIFIED] Default background revised
- [MODIFIED] Addons view revised to grid-based layout (thanks LeviJay)
- [MODIFIED] DialogYesNo.xml button order reversed (thanks MoneyMaker)
- [NEW] File manager
- [NEW] Media Filter (video)
- [NEW] DialogPVRGuideSearch.xml
- [MODIFIED] Recent items (video / music) now uses skin widgets addon
- [MODIFIED] PVR menu integrated into main video menu
- [UPDATED] Preparation for Beta release: Strings localised and generally cleaned up
- [MODIFIED] Refresh library button moved to sidebar. Gotham and Frodo implementations tentatively supported (Thanks Yowls).
- [NEW] Cast and crew viewer added to video info
- [MODIFIED] Favourites browser tweaked