@@ -8,7 +8,7 @@
         <include>modalDialog</include>
         <control type="group">
             <posx>0</posx>
-            <posy>row-9-begin</posy>
+            <posy>522</posy>
             <!--animations-->
             <include>modalDialogInOut</include>
             <control type="image">
