@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <window>
-    <onload>action(back)</onload>
+	<onload>action(back)</onload>
     <onload>activatewindow(videoosd)</onload>
     <controls></controls>
 </window>
