@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="skin.maximinimalism" version="0.9.9" name="Maximinimalism" provider-name="theDeadman">
 	<requires>
-		<import addon="xbmc.gui" version="4.0.0"/>
-		<!--<import addon="xbmc.gui" version="5.0.1"/>-->
+		<import addon="xbmc.gui" version="5.0.1"/>
 		<import addon="service.skin.widgets" version="0.0.2"/>
 	</requires>
 	<extension point="xbmc.gui.skin" defaultthemename="textures.xbt" debugging="false">
@@ -10,7 +9,7 @@
 	</extension>
 	<extension point="xbmc.addon.metadata">
 		<summary>A skin for XBMC from theDeadman</summary>
-		<description>Maximinimalism is a lightweight, clean and simple XBMC experience that is designed for maximum usability and minimum fuss.</description>
+		<description>Maximinimalism is a lightweight, clean and simple XBMC experience designed for maximum usability and minimum fuss.</description>
 		<platform>all</platform>
 		<license>This work is licensed under the Creative Commons Attribution-Noncommercial-Share Alike 3.0 License.</license>
 		<forum>http://forum.xbmc.org/showthread.php?tid=170839</forum>
